--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mysql": "^2.18.1"
   }
 }
